package(default_visibility = ["//visibility:public"])

exports_files(["libdl_clibgen.scm"])

load("//lib:BUILD.bzl",
     "clibgen_runner",
     "CLIB_COPTS", "CLIB_LINKOPTS", "CLIB_DEFINES")

################################################################
cc_library(
    name  = "dl_s7_archive", # emits libdl_s7_archive.a
    linkstatic = True,
    alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = [":libdl_s7.c", "//src:s7.h"],
    copts = CLIB_COPTS,
    linkopts = CLIB_LINKOPTS,
    defines = CLIB_DEFINES,
)

cc_binary(
    name  = "dl_s7",  # create libdl_s7.{dylib,so}
    linkshared = True,
    srcs  = [":libdl_s7.c", "//src:s7.h"],
    copts = CLIB_COPTS,
    linkopts = CLIB_LINKOPTS,
    defines = CLIB_DEFINES,
)

clibgen_runner(
    name = "libdl_s7_runbin",
    tool = "//lib:clibgen",
    args = ["--script", "lib/libdl/libdl_clibgen.scm"],
    srcs = [":libdl_clibgen.scm", "//lib:clibgen.scm"],
    outs = [":libdl_s7.c"]
)
